testdata/baselines/reference/submodule/compiler/privateFieldAssignabilityFromUnknown.errors.txt
privateFieldAssignabilityFromUnknown.ts(2,3): error TS18028: Private identifiers are only available when targeting ECMAScript 2015 and higher.
privateFieldAssignabilityFromUnknown.ts(5,7): error TS2322: Type 'unknown' is not assignable to type 'Class'.
  Property '#field' is missing in type '{}' but required in type 'Class'.


==== privateFieldAssignabilityFromUnknown.ts (2 errors) ====
    export class Class {
      #field: any
      ~~~~~~
!!! error TS18028: Private identifiers are only available when targeting ECMAScript 2015 and higher.
    }
    
    const task: Class = {} as unknown;
          ~~~~
!!! error TS2322: Type 'unknown' is not assignable to type 'Class'.
!!! error TS2322:   Property '#field' is missing in type '{}' but required in type 'Class'.
!!! related TS2728 privateFieldAssignabilityFromUnknown.ts:2:3: '#field' is declared here.
    